--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ if ($_GET[['feedback']]) {
 
                 <div class="col-lg-12 login-form">
                     <div class="col-lg-12 login-form">
-                        <form method="post" action="http://filerun.radon.internal/?page=login&action=login&nonajax=1">
+                        <form method="post" action="http://desktop-dt60db6.student.iastate.edu:36488/?page=login&action=login&nonajax=1">
                             <div class="form-group">
                                 <label class="form-control-label">USERNAME</label>
                                 <input type="text" name="username" value="" class="form-control">
